Alignment fix on social media icons

--- a/css/style.css
+++ b/css/style.css
@@ -597,8 +597,9 @@ ul.nav-links li a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 70px;
+    width: 80px;
     margin-top: 15px;
+    text-align: center;
 }
 
 .socialMedia_icon {
@@ -610,7 +611,7 @@ ul.nav-links li a {
 
 .contact_value {
     font-size: 0.9rem;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     opacity: 0.5;
 }
 
@@ -1249,7 +1250,7 @@ body.show-scrollbar {
 
 }
 
-@media (max-width: 420px) {
+@media (max-width: 474px) {
     
     .socialMedia_container {
         align-items: center;
